# pypistarshipagentic

./: .gitignore  LICENSE.md  LICENSE_HEADER.txt  README.md  SYSTEM_KNOWLEDGE.md  add_license_header.py  no-go-alias.txt  pypiteleport.py  pyproject.toml
src/starshipagentic/: __init__.py  __main__.py  cli.py  cli_generated.py  cli_static.py  commands-list.yml  starshipagentic.yml
src/starshipagentic/commands/: __init__.py  architecture_cmds.py  cosmic_cmds.py  droid_cmds.py  engineering_cmds.py  exploration_cmds.py  git_cmds.py  mcars_cmds.py  mission_cmds.py  navigation_cmds.py  send_probe_cmds.py  transmission_cmds.py  vessel_cmds.py  weapons_cmds.py
src/starshipagentic/commands/architecture/: __init__.py
src/starshipagentic/commands/architecture/review_schematics/: cli.py  services.py
src/starshipagentic/commands/beam/: __init__.py
src/starshipagentic/commands/beam/teleport/: __init__.py  services.py
src/starshipagentic/commands/captains_orders/: __init__.py
src/starshipagentic/commands/captains_orders/engage/: __init__.py  cli.py  services.py
src/starshipagentic/commands/captains_orders/trycoder/: cli.py
src/starshipagentic/commands/communications_officer/: __init__.py
src/starshipagentic/commands/communications_officer/authorize_codes/: cli.py  services.py
src/starshipagentic/commands/communications_officer/receive_transmission/: __init__.py  services.py
src/starshipagentic/commands/communications_officer/scan_sector/: __init__.py
src/starshipagentic/commands/cosmic/: __init__.py
src/starshipagentic/commands/cosmic/supernova/: cli.py
src/starshipagentic/commands/droid/: __init__.py
src/starshipagentic/commands/droid/droid_splain/: cli.py
src/starshipagentic/commands/droid/man_splain/: cli.py
src/starshipagentic/commands/droids/: __init__.py
src/starshipagentic/commands/droids/droid_splain/: __init__.py  services.py
src/starshipagentic/commands/droids/man_splain/: __init__.py  services.py
src/starshipagentic/commands/engineering/: __init__.py
src/starshipagentic/commands/engineering/complexity_report/: cli.py  services.py
src/starshipagentic/commands/engineering/create_checkpoint/: services.py
src/starshipagentic/commands/engineering/inspect_vessel/: cli.py  services.py
src/starshipagentic/commands/engineering/restore_checkpoint/: __init__.py
src/starshipagentic/commands/engineering_officer/: __init__.py
src/starshipagentic/commands/engineering_officer/calibrate_technology/: __init__.py  cli.py  services.py
src/starshipagentic/commands/engineering_officer/review_schematics/: __init__.py
src/starshipagentic/commands/exploration/: __init__.py
src/starshipagentic/commands/exploration/trycoder/: __init__.py  services.py
src/starshipagentic/commands/exploration/warp_speed/: __init__.py  cli.py  services.py
src/starshipagentic/commands/fleet_commander/: __init__.py
src/starshipagentic/commands/fleet_commander/commission_ship/: __init__.py  services.py
src/starshipagentic/commands/fleet_commander/tour_ship/: __init__.py  cli.py  services.py
src/starshipagentic/commands/fleet_commander/visualize_ship/: __init__.py  cli.py  services.py
src/starshipagentic/commands/gitmaster/: __init__.py
src/starshipagentic/commands/gitmaster/teleport/: cli.py
src/starshipagentic/commands/insterstellar_officer/: __init__.py
src/starshipagentic/commands/insterstellar_officer/build_landing_zone/: cli.py
src/starshipagentic/commands/insterstellar_officer/fabricate_infrastructure/: __init__.py  services.py
src/starshipagentic/commands/insterstellar_officer/map_planet/: cli.py
src/starshipagentic/commands/maintenance_officer/: __init__.py
src/starshipagentic/commands/maintenance_officer/complexity_report/: __init__.py
src/starshipagentic/commands/maintenance_officer/create_checkpoint/: __init__.py  cli.py
src/starshipagentic/commands/maintenance_officer/inspect_vessel/: __init__.py
src/starshipagentic/commands/maintenance_officer/restore_checkpoint/: cli.py  services.py
src/starshipagentic/commands/mcars/: __init__.py
src/starshipagentic/commands/mcars/search/: __init__.py  cli.py  services.py
src/starshipagentic/commands/mcars/transport/: __init__.py  cli.py  services.py
src/starshipagentic/commands/mission/: __init__.py
src/starshipagentic/commands/mission/expand_mission/: services.py
src/starshipagentic/commands/mission/mission_brief/: cli.py
src/starshipagentic/commands/navigation/: __init__.py
src/starshipagentic/commands/navigation/set_waypoints/: __init__.py  cli.py
src/starshipagentic/commands/navigation_officer/: __init__.py
src/starshipagentic/commands/navigation_officer/plot_navigation/: __init__.py  cli.py  services.py
src/starshipagentic/commands/navigation_officer/set_waypoints/: services.py
src/starshipagentic/commands/number_two/: __init__.py
src/starshipagentic/commands/number_two/expand_mission/: __init__.py  cli.py
src/starshipagentic/commands/number_two/mission_brief/: __init__.py  services.py
src/starshipagentic/commands/probe/: __init__.py
src/starshipagentic/commands/probe/build_landing_zone/: __init__.py  services.py
src/starshipagentic/commands/red_buttons/: __init__.py
src/starshipagentic/commands/tactical_officer/: __init__.py
src/starshipagentic/commands/transmission/: __init__.py
src/starshipagentic/commands/vessel/: __init__.py
src/starshipagentic/commands/weapons/: __init__.py
src/starshipagentic/utils/: __init__.py  base_command.py  command_registry.py  interactive.py
src/starshipagentic/visualization/: README.md  __init__.py  pygame_display.py
src/starshipagentic/visualization/assets/: __init__.py  ascii-art.txt  defiant.txt  django.txt  enterprise.txt  flask.txt  react.txt  scout40.txt  voyager.txt
tests/: __init__.py  test_base_command.py  test_cli.py  test_command_execution.py  test_command_nesting.py  test_command_sequence.py  test_mission_cmds.py
tools/: generate_readme_tables.py  sync2_aliases.py  sync_command_aliases-ms1.2-flat-commands.py  sync_command_aliases.py  validate_cli.py  validate_commands.py
(+20 files in other folders)
