[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "starshipagentic"
version = "0.1.0"
description = "AI-assisted software development with a Star Trek-inspired interface"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "requests>=2.25.0",
    "tinydb>=4.5.0",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/yourusername/starshipagentic"
"Bug Tracker" = "https://github.com/yourusername/starshipagentic/issues"

[project.scripts]
starshipagentic = "starshipagentic.cli:main"
tour = "starshipagentic.commands.vessel.tour_ship.cli:tour_ship_command"
commission = "starshipagentic.commands.vessel.commission_ship.cli:commission_ship_command"
mission = "starshipagentic.commands.mission.mission_brief.cli:mission_brief_command"
expand = "starshipagentic.commands.mission.expand_mission.cli:expand_mission_command"
schematics = "starshipagentic.commands.architecture.review_schematics.cli:review_schematics_command"
calibrate = "starshipagentic.commands.architecture.calibrate_technology.cli:calibrate_technology_command"
navigation = "starshipagentic.commands.navigation.plot_navigation.cli:plot_navigation_command"
waypoints = "starshipagentic.commands.navigation.set_waypoints.cli:set_waypoints_command"
authorize = "starshipagentic.commands.transmission.authorize_codes.cli:authorize_codes_command"
scan = "starshipagentic.commands.transmission.scan_sector.cli:scan_sector_command"
transmission = "starshipagentic.commands.transmission.receive_transmission.cli:receive_transmission_command"
warp = "starshipagentic.commands.exploration.warp_speed.cli:warp_speed_command"
trycoder = "starshipagentic.commands.exploration.trycoder.cli:trycoder_command"
engage = "starshipagentic.commands.exploration.engage.cli:engage_command"
photons = "starshipagentic.commands.weapons.fire_photons.cli:fire_photons_command"
lasers = "starshipagentic.commands.weapons.aim_lasers.cli:aim_lasers_command"
shields = "starshipagentic.commands.weapons.shields_up.cli:shields_up_command"
checkpoint = "starshipagentic.commands.engineering.create_checkpoint.cli:create_checkpoint_command"
restore = "starshipagentic.commands.engineering.restore_checkpoint.cli:restore_checkpoint_command"
inspect = "starshipagentic.commands.engineering.inspect_vessel.cli:inspect_vessel_command"
complexity = "starshipagentic.commands.engineering.complexity_report.cli:complexity_report_command"
supernova = "starshipagentic.commands.cosmic.supernova.cli:supernova_command"
teleport = "starshipagentic.commands.beam.teleport.cli:teleport_command"
search = "starshipagentic.commands.mcars.search.cli:search_command"
transport = "starshipagentic.commands.mcars.transport.cli:transport_command"
droid = "starshipagentic.commands.droid.droid_splain.cli:droid_splain_command"
splain = "starshipagentic.commands.droid.man_splain.cli:man_splain_command"
map = "starshipagentic.commands.probe.map_planet.cli:map_planet_command"
buildlz = "starshipagentic.commands.probe.build_landing_zone.cli:build_landing_zone_command"
fabricate = "starshipagentic.commands.probe.fabricate_infrastructure.cli:fabricate_infrastructure_command"
vessel = "starshipagentic.commands.vessel:run_group"
architecture = "starshipagentic.commands.architecture:run_group"
probe = "starshipagentic.commands.probe:run_group"
exploration = "starshipagentic.commands.exploration:run_group"
weapons = "starshipagentic.commands.weapons:run_group"
engineering = "starshipagentic.commands.engineering:run_group"
cosmic = "starshipagentic.commands.cosmic:run_group"
mcars = "starshipagentic.commands.mcars:run_group"
tour-ship = "starshipagentic.commands.vessel.tour_ship.cli:tour_ship_command"
commission-ship = "starshipagentic.commands.vessel.commission_ship.cli:commission_ship_command"
visualize-ship = "starshipagentic.commands.vessel.visualize_ship.cli:visualize_ship_command"
mission-brief = "starshipagentic.commands.mission.mission_brief.cli:mission_brief_command"
expand-mission = "starshipagentic.commands.mission.expand_mission.cli:expand_mission_command"
review-schematics = "starshipagentic.commands.architecture.review_schematics.cli:review_schematics_command"
calibrate-technology = "starshipagentic.commands.architecture.calibrate_technology.cli:calibrate_technology_command"
plot-navigation = "starshipagentic.commands.navigation.plot_navigation.cli:plot_navigation_command"
set-waypoints = "starshipagentic.commands.navigation.set_waypoints.cli:set_waypoints_command"
authorize-codes = "starshipagentic.commands.transmission.authorize_codes.cli:authorize_codes_command"
scan-sector = "starshipagentic.commands.transmission.scan_sector.cli:scan_sector_command"
receive-transmission = "starshipagentic.commands.transmission.receive_transmission.cli:receive_transmission_command"
map-planet = "starshipagentic.commands.probe.map_planet.cli:map_planet_command"
build-landing-zone = "starshipagentic.commands.probe.build_landing_zone.cli:build_landing_zone_command"
fabricate-infrastructure = "starshipagentic.commands.probe.fabricate_infrastructure.cli:fabricate_infrastructure_command"
warp-speed = "starshipagentic.commands.exploration.warp_speed.cli:warp_speed_command"
fire-photons = "starshipagentic.commands.weapons.fire_photons.cli:fire_photons_command"
aim-lasers = "starshipagentic.commands.weapons.aim_lasers.cli:aim_lasers_command"
shields-up = "starshipagentic.commands.weapons.shields_up.cli:shields_up_command"
create-checkpoint = "starshipagentic.commands.engineering.create_checkpoint.cli:create_checkpoint_command"
restore-checkpoint = "starshipagentic.commands.engineering.restore_checkpoint.cli:restore_checkpoint_command"
inspect-vessel = "starshipagentic.commands.engineering.inspect_vessel.cli:inspect_vessel_command"
complexity-report = "starshipagentic.commands.engineering.complexity_report.cli:complexity_report_command"
droid-splain = "starshipagentic.commands.droid.droid_splain.cli:droid_splain_command"
man-splain = "starshipagentic.commands.droid.man_splain.cli:man_splain_command"
beam = "starshipagentic.commands.beam:run_group"
